Fix (again) overflowing attachment boxes
This time, it makes them multiline.

--- a/brutaldon/static/css/brutaldon-dark.css
+++ b/brutaldon/static/css/brutaldon-dark.css
@@ -105,6 +105,13 @@ emoji-link
     font-size: 2em;
 }
 
+.content figure.attachment-image
+{
+    text-align:left;
+    margin-left: 0;
+    margin-right: 0;
+}
+
 
 @media screen and (max-width: 768px) {
     .media {
